--- a/module5/angular-product/package.json
+++ b/module5/angular-product/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "angular-bootstrap-md": "^15.0.0",
+    "ngx-pagination": "^5.1.1",
     "querystring": "^0.2.1",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^11.7.27",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
